; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_event.c_adns_processexceptional.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/adns/src/extr_event.c_adns_processexceptional.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }
%struct.timeval = type { i32 }

@cc_entex = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"poll/select\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"exceptional condition detected\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adns_processexceptional(%struct.TYPE_5__* %0, i32 %1, %struct.timeval* %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.timeval*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.timeval* %2, %struct.timeval** %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = load i32, i32* @cc_entex, align 4
  %9 = call i32 @adns__consistency(%struct.TYPE_5__* %7, i32 0, i32 %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %24 [
    i32 129, label %13
    i32 131, label %13
    i32 130, label %14
    i32 128, label %14
  ]

13:                                               ; preds = %3, %3
  br label %26

14:                                               ; preds = %3, %3
  %15 = load i32, i32* %5, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %15, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  br label %26

21:                                               ; preds = %14
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %23 = call i32 @adns__tcp_broken(%struct.TYPE_5__* %22, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  br label %26

24:                                               ; preds = %3
  %25 = call i32 (...) @abort() #3
  unreachable

26:                                               ; preds = %21, %20, %13
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %28 = load i32, i32* @cc_entex, align 4
  %29 = call i32 @adns__consistency(%struct.TYPE_5__* %27, i32 0, i32 %28)
  ret i32 0
}

declare dso_local i32 @adns__consistency(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @adns__tcp_broken(%struct.TYPE_5__*, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
